--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!------------ The title for SEO & brwser tabs ------>
+        <!--------------------- The title for SEO & brwser tabs -------------------->
 
         <title>The Bunker Hotel Sydney</title>   
 
-        <!-------------------- Viewport Meta ---------------->
+        <!------------------------------- Viewport Meta -------------------------------->
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!----------------------- Gridlex ------------------->
+        <!---------------------------- Gridlex ------------------------------->
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.7.1/gridlex.min.css">
 
-        <!----------------- Fontawesome ------------------>
+        <!------------------------- Fontawesome ----------------------------->
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-        <!--------------------- Google fonts ----------------->
+        <!-------------------------------- Google fonts ------------------------------>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,900;1,300;1,400;1,500;1,900&display=swap" rel="stylesheet">
 
 
-        <!------------------- Sylesheet --------------------->
+        <!----------------------------- Sylesheet --------------------->
 
         <link rel="stylesheet" href="/style.css">
 
@@ -39,7 +39,7 @@
         </header>
 
 
-        <!------------------- Dark intro section -------------->
+        <!-------------------------------- Dark intro section -------------------------------->
 
         <section class="grid bg-featured light-text padded">
             <div class="col-6_sm-12 bg-image bg-bed bg-padded tall-50">
@@ -52,7 +52,7 @@
             </div>
         </section>
 
-        <!-------------------- Opening banner --------------->
+        <!--------------------------------- Opening banner --------------------------------->
 
         <section class="bg-image bg-halway padded center light-text tall-50 grid">
             <div class="col-12-middle">
@@ -61,7 +61,7 @@
             </div>
         </section>
 
-        <!----------------- Features/About blocks ------------->
+        <!----------------------------- Features/About blocks ------------------------->
 
         <section class="grid">
             <div class="col-6_sm-12-middle padded">
@@ -88,7 +88,7 @@
             <div class="col-6_sm-12 bg-image bg-sheets bg-padded hide-sm"></div>
         </section>
 
-        <!--------------------- Socials ------------------------>
+        <!---------------------------------- Socials ----------------------------------->
 
         <section class="bg-image padded right light-text bg-roof tall-50 grid social-banner">
             <div class="col-12-middle">
@@ -103,11 +103,11 @@
 
         </section>
         
-        <!--------------------- Map -------------------------->
+        <!----------------------------- Map ------------------------------------------>
 
         <section class="bg-image bg-map bg-padded"></section>
         
-        <!------------------------ Footer --------------------->
+        <!---------------------------------- Footer ---------------------------------->
 
         <footer class="grid bg-dark light-text">
             <div class="col-8_sm-12 padded">
